@@ -21,6 +21,7 @@ pm_to_blib
 README
 README.pod
 t/ipc_srlock*
+t/worker*
 t/*.log
 *.tar.gz
 Async-IPC-*
